--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ Pillow = "^9.0.1"
 django-singleton-model = "^0.2.3"
 aiogram = "^2.19"
 validate_email = "^1.3"
+pika = "^1.2.0"
+aio-pika = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 
