--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ aiogram = "^2.19"
 validate_email = "^1.3"
 pika = "^1.2.0"
 aio-pika = "^7.1.2"
+httpx = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
 
