--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ validate_email = "^1.3"
 pika = "^1.2.0"
 aio-pika = "^7.1.2"
 httpx = "^0.22.0"
+redis = "^4.2.2"
 
 [tool.poetry.dev-dependencies]
 
