--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ services:
     build:
       context: ./tutors_assistant
     command: >
-      sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn admin.config.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - ./tutors_assistant:/tutors_assistant/
-    ports:
-      - 8000:8000
+      - static_volume:/tutors_assistant/static
+      - media_volume:/tutors_assistant/media
+    expose:
+      - 8000
     env_file:
       - ./.env
     depends_on:
@@ -65,5 +67,19 @@ services:
     env_file:
       - ./.env
 
+  nginx:
+    build:
+      context: ./nginx
+    ports:
+      - "80:80"
+    restart: unless-stopped
+    volumes:
+      - static_volume:/tutors_assistant/static
+      - media_volume:/tutors_assistant/media
+    depends_on:
+      - admin
+
 volumes:
   postgres_data:
+  media_volume:
+  static_volume:
