--- a/tutors_assistant/pyproject.toml
+++ b/tutors_assistant/pyproject.toml
@@ -10,7 +10,6 @@ Django = "^3.2"
 pytest = "^7.1.1"
 djangorestframework = "^3.13.1"
 django-filter = "^21.1"
-psycopg2 = "^2.9.3"
 black = "^22.3.0"
 pytest-cov = "^3.0.0"
 psycopg2-binary = "^2.9.3"
@@ -19,6 +18,7 @@ django-singleton-model = "^0.2.3"
 aiogram = "^2.19"
 validate_email = "^1.3"
 pika = "^1.2.0"
+gunicorn = "^20.1.0"
 aio-pika = "^7.1.2"
 httpx = "^0.22.0"
 redis = "^4.2.2"
